contrast homepage fixed

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,7 +11,7 @@ $light-gray: #F4F4F4;
 
 // CUSTOM COLORS
 $ct-primary: #9B51E0;
-$ct-primary-light: #B478F8;
+$ct-primary-light: #D0A9F9;
 $ct-primary-dark: #7033B3;
 
 $ct-dark: #212131;
